<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/list_title"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/list_by_title" />
        <item
            android:id="@+id/list_cat"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/list_by_cat" />
        <item
            android:id="@+id/list_author"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/list_by_author" />

        <item
            android:id="@+id/help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

</menu>
